--- a/index.html
+++ b/index.html
@@ -11,45 +11,36 @@ permalink: /
   <p class="intro" style="margin-top: 1rem; font-size: 1rem; max-width: 600px; margin-left: auto; margin-right: auto;">Explore curated systems, tools, and knowledge across wellness, productivity, and financial clarity.</p>
 </section>
 
-<!-- Pillar Previews -->
-<section class="pillar-previews">
+<!-- Updated Pillar Previews -->
+<h2 style="text-align:center; margin-top: 2rem;">🔍 Explore the Pillars</h2>
 
-  <!-- Learn Card -->
-  <div class="pillar-card learn">
-    <span class="pillar-icon">📘</span>
-    <h2><a href="{{ '/learn/' | relative_url }}">Learn</a></h2>
-    <p>Dive into articles and insights across mindset, health, and clarity.</p>
-    <ul>
-      {% assign learn_posts = site.posts | where_exp: "post", "post.tags contains 'learn'" | sort: "date" | reverse | slice: 0, 3 %}
-      {% for post in learn_posts %}
-        <li><a href="{{ post.url | relative_url }}">{{ post.title }}</a></li>
-      {% endfor %}
-    </ul>
+<div class="pillar-previews">
+
+  <div class="pillar-card health">
+    <span class="pillar-icon">
+      <svg width="28" height="28" fill="#2e8b57" viewBox="0 0 24 24"><path d="M10 20V6h4v14h6v2H4v-2h6z"/><path d="M7 8h10v2H7z"/></svg>
+    </span>
+    <h2><a href="{{ '/health/' | relative_url }}">Health</a></h2>
+    <p>Articles and tools for mental clarity, physical well-being, and emotional balance.</p>
   </div>
 
-  <!-- Tools Card -->
-  <div class="pillar-card tools">
-    <span class="pillar-icon">🛠</span>
-    <h2><a href="{{ '/tools/' | relative_url }}">Tools</a></h2>
-    <p>Use practical templates and trackers to make smarter decisions.</p>
-    <ul>
-      <li><a href="{{ '/tools/' | relative_url }}">Habit Tracker (Google Sheet)</a></li>
-      <li><a href="{{ '/tools/' | relative_url }}">Spending Audit Tool</a></li>
-    </ul>
+  <div class="pillar-card wealth">
+    <span class="pillar-icon">
+      <svg width="28" height="28" fill="#e67300" viewBox="0 0 24 24"><path d="M12 2a10 10 0 100 20 10 10 0 000-20zm1 17v-2h-2v2h2zm1.2-4.9c-.5.4-1.1.8-1.2.8V13c.8-.5 2-1.3 2-2.5 0-1.1-.9-2-2-2-.7 0-1.4.4-1.7 1h-2c.4-1.6 1.8-3 3.7-3 2.2 0 4 1.8 4 4 0 1.9-1.8 3.1-3 4z"/></svg>
+    </span>
+    <h2><a href="{{ '/wealth/' | relative_url }}">Wealth</a></h2>
+    <p>Guides on building financial resilience, growing your income, and managing your resources.</p>
   </div>
 
-  <!-- Stacks Card -->
-  <div class="pillar-card stacks">
-    <span class="pillar-icon">📦</span>
-    <h2><a href="{{ '/stacks/' | relative_url }}">Stacks</a></h2>
-    <p>Life systems you can plug in: routines, resets, and frameworks.</p>
-    <ul>
-      <li><a href="{{ '/stacks/' | relative_url }}">Digital Detox Stack</a></li>
-      <li><a href="{{ '/stacks/' | relative_url }}">Financial Clarity Stack</a></li>
-    </ul>
+  <div class="pillar-card meta">
+    <span class="pillar-icon">
+      <svg width="28" height="28" fill="#0077cc" viewBox="0 0 24 24"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 9h-4v7h-2v-7H7V9h4V6h2v3h4v2z"/></svg>
+    </span>
+    <h2><a href="{{ '/meta/' | relative_url }}">Meta</a></h2>
+    <p>Explorations into meaning, mindfulness, and the broader perspectives that guide life choices.</p>
   </div>
 
-</section>
+</div>
 
 <!-- Latest Posts Grid -->
 <section style="padding: 2rem;">
@@ -78,4 +69,6 @@ permalink: /
       </div>
     {% endfor %}
   </div>
+</section>
+
 </section>
