--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ permalink: /
 </section>
 
 <!-- Updated Pillar Previews -->
-<h2 style="text-align:center; margin-top: 2rem;">🔍 Explore the Pillars</h2>
+<h2 style="text-align:center; margin-top: 2rem;">🗄 Stacks</h2>
 
 <div class="pillar-previews">
 
