--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@ permalink: /
   <p class="intro" style="margin-top: 1rem; font-size: 1rem; max-width: 600px; margin-left: auto; margin-right: auto;">Explore curated systems, tools, and knowledge across wellness, productivity, and financial clarity.</p>
 </section>
 
-<!-- Updated Pillar Previews -->
-<h2 style="text-align:center; margin-top: 2rem;">🗄 Stacks</h2>
+<!-- Updated Pillar Previews 
+<h2 style="text-align:center; margin-top: 2rem;">🗄 Stacks</h2> -->
 
 <div class="pillar-previews">
 
