--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ permalink: /
 
 <!-- Hero Section -->
 <section class="hero" style="text-align:center; padding: 2rem 1rem;">
-  <h1>💡 LifeStack</h1>
+  <!--<h1>💡 LifeStack</h1>
   <p class="tagline" style="font-size: 1.25rem; color: #555;">Build a resilient, intentional life — one stack at a time.</p>
   <!--<p class="intro" style="margin-top: 1rem; font-size: 1rem; max-width: 600px; margin-left: auto; margin-right: auto;">Explore curated systems, tools, and knowledge across wellness, productivity, and financial clarity.</p>-->
 </section>
