--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@ title: LifeStack – A Modular Framework for Living Well
 permalink: /
 ---
 
-<!-- Hero Section -->
+<!-- Hero Section 
 <section class="hero" style="text-align:center; padding: 2rem 1rem;">
   <h1><p class="tagline" style="font-size: 1.25rem; color: #555;">Build , optimize, scale.</p></h1>
-  <!--<p class="intro" style="margin-top: 1rem; font-size: 1rem; max-width: 600px; margin-left: auto; margin-right: auto;">Explore curated systems, tools, and knowledge across wellness, productivity, and financial clarity.</p>-->
-</section>
+  <!--<p class="intro" style="margin-top: 1rem; font-size: 1rem; max-width: 600px; margin-left: auto; margin-right: auto;">Explore curated systems, tools, and knowledge across wellness, productivity, and financial clarity.</p>
+</section>-->
 
 <!-- Updated Pillar Previews 
 <h2 style="text-align:center; margin-top: 2rem;">🗄 Stacks</h2> -->
